--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4489bf6c845e7c41440cd82149f1775bbb80483ca6de14523f365c27ed94590d"
+  "signature": "sha256:a5739ada1fd495371f0dea52e575c48d4989a847b228c4a719defa766b8ecd6a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -380,40 +380,47 @@
       "import pandas as pd\n",
       "import numpy  as np\n",
       "\n",
-      "r     = 0.14   # 14%/yr discount rate\n",
-      "g     = 0.25   # 25%/yr revenue/cost growth rate\n",
-      "t     = 0.35   # 35%/yr tax rate\n",
-      "life  = 2016 - 2012 \n",
-      "capex = 12e6   # $12M CapEx\n",
-      "term  =  5e6   #  $5M terminal value\n",
-      "sales = [0] + [+fi.rnd(fi.comp(15e6, i, g)) for i in range(life)]\n",
-      "cogs  = [0] + [-fi.rnd(fi.comp( 9e6, i, g)) for i in range(life)]\n",
-      "deprc = [0] + [-capex/life          for _ in range(life)]\n",
-      "oppft = [0]*(life+1)\n",
-      "for i in range(life+1): oppft[i] = sales[i] + cogs[i] + deprc[i]\n",
-      "taxes = [fi.rnd(-t*p) for p in oppft]\n",
-      "nopat = [0]*(life+1)\n",
-      "for i in range(life+1): nopat[i] = oppft[i] + taxes[i]\n",
-      "fcf   = [-capex] + [0]*(life)\n",
-      "for i in range(life+1): fcf[i] += nopat[i] - deprc[i]\n",
-      "npv = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "r     = 0.14      # 14%/yr discount rate\n",
       "\n",
-      "years = [2012 + i for i in range(0, life+1)]\n",
-      "data  = {'COGS':              cogs, \n",
-      "         'Revenue':           sales, \n",
+      "rev_i = 15e6      # $15M initial revenue\n",
+      "rev_g = 0.25      # 25%/yr revenue growth rate\n",
+      "exp_i =  9e6      # $9M initial expenses \n",
+      "exp_g = 0.25      # 25%/yr expenses growth rate\n",
+      "sga_i =    0      # $0/yr SG&A\n",
+      "tax_r = 0.35      # 35%/yr tax rate\n",
+      "beg   = 2012      # First year of project\n",
+      "end   = 2016      # Last year of project\n",
+      "life  = end-beg   # Project lifetime\n",
+      "cap_i = 12e6      # $12M Initial CAPX\n",
+      "term  =  5e6      # $5M terminal value\n",
+      "\n",
+      "sales = np.array([0] + [+fi.rnd(fi.comp(rev_i, i, rev_g)) for i in range(life)])\n",
+      "cogs  = np.array([0] + [-fi.rnd(fi.comp(exp_i, i, exp_g)) for i in range(life)])\n",
+      "sga   = np.array([0] + [-sga_i]*life)\n",
+      "deprc = np.array([0] + [-cap_i/life                       for _ in range(life)])\n",
+      "oppft = sales + cogs + sga + deprc\n",
+      "taxes = np.array(np.round(-tax_r * oppft), dtype=int)\n",
+      "nopat = oppft + taxes\n",
+      "capx  = np.array([-cap_i] + [0]*life)\n",
+      "fcf   = nopat + capx + (-deprc)\n",
+      "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "\n",
+      "years = [i for i in range(beg, end+1)]\n",
+      "data  = {'Revenue':           sales, \n",
+      "         'COGS':              cogs, \n",
+      "         'SG&A':              sga,\n",
       "         'Less Dep':          deprc, \n",
       "         'Operating Profits': oppft, \n",
       "         'Tax':               taxes, \n",
       "         'NOPAT':             nopat,\n",
-      "         'Plus Dep':          [-d for d in deprc],\n",
-      "         'CAPX':              [-capex] + [0]*life,\n",
+      "         'Plus Dep':          np.abs(deprc),\n",
+      "         'CAPX':              capx,\n",
       "         'Free Cash Flow':    fcf}\n",
-      "cols  = ['Revenue', 'COGS', 'Less Dep', 'Operating Profits', 'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow']\n",
+      "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Operating Profits', 'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow']\n",
       "df    = pd.DataFrame(data, columns=cols, index=years)\n",
       "\n",
-      "print \n",
-      "print df.T\n",
-      "print \"\\nProject NPV = %d\" % fi.rnd(npv) "
+      "print \"\\nProject NPV = %d\\n\" % fi.rnd(npv) \n",
+      "df.T"
      ],
      "language": "python",
      "metadata": {},
@@ -423,24 +430,131 @@
        "stream": "stdout",
        "text": [
         "\n",
+        "Project NPV = 9815101\n",
+        "\n"
+       ]
+      },
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>2012</th>\n",
+        "      <th>2013</th>\n",
+        "      <th>2014</th>\n",
+        "      <th>2015</th>\n",
+        "      <th>2016</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Revenue</th>\n",
+        "      <td>        0</td>\n",
+        "      <td> 15000000</td>\n",
+        "      <td> 18750000</td>\n",
+        "      <td> 23437500</td>\n",
+        "      <td> 29296875</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>COGS</th>\n",
+        "      <td>        0</td>\n",
+        "      <td> -9000000</td>\n",
+        "      <td>-11250000</td>\n",
+        "      <td>-14062500</td>\n",
+        "      <td>-17578125</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>SG&amp;A</th>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Less Dep</th>\n",
+        "      <td>        0</td>\n",
+        "      <td> -3000000</td>\n",
+        "      <td> -3000000</td>\n",
+        "      <td> -3000000</td>\n",
+        "      <td> -3000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Operating Profits</th>\n",
+        "      <td>        0</td>\n",
+        "      <td>  3000000</td>\n",
+        "      <td>  4500000</td>\n",
+        "      <td>  6375000</td>\n",
+        "      <td>  8718750</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Tax</th>\n",
+        "      <td>        0</td>\n",
+        "      <td> -1050000</td>\n",
+        "      <td> -1575000</td>\n",
+        "      <td> -2231250</td>\n",
+        "      <td> -3051562</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>NOPAT</th>\n",
+        "      <td>        0</td>\n",
+        "      <td>  1950000</td>\n",
+        "      <td>  2925000</td>\n",
+        "      <td>  4143750</td>\n",
+        "      <td>  5667188</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Plus Dep</th>\n",
+        "      <td>        0</td>\n",
+        "      <td>  3000000</td>\n",
+        "      <td>  3000000</td>\n",
+        "      <td>  3000000</td>\n",
+        "      <td>  3000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>CAPX</th>\n",
+        "      <td>-12000000</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Free Cash Flow</th>\n",
+        "      <td>-12000000</td>\n",
+        "      <td>  4950000</td>\n",
+        "      <td>  5925000</td>\n",
+        "      <td>  7143750</td>\n",
+        "      <td>  8667188</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>10 rows \u00d7 5 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 84,
+       "text": [
         "                       2012      2013      2014      2015      2016\n",
         "Revenue                   0  15000000  18750000  23437500  29296875\n",
         "COGS                      0  -9000000 -11250000 -14062500 -17578125\n",
+        "SG&A                      0         0         0         0         0\n",
         "Less Dep                  0  -3000000  -3000000  -3000000  -3000000\n",
         "Operating Profits         0   3000000   4500000   6375000   8718750\n",
-        "Tax                       0  -1050000  -1575000  -2231250  -3051563\n",
-        "NOPAT                     0   1950000   2925000   4143750   5667187\n",
+        "Tax                       0  -1050000  -1575000  -2231250  -3051562\n",
+        "NOPAT                     0   1950000   2925000   4143750   5667188\n",
         "Plus Dep                  0   3000000   3000000   3000000   3000000\n",
         "CAPX              -12000000         0         0         0         0\n",
-        "Free Cash Flow    -12000000   4950000   5925000   7143750   8667187\n",
+        "Free Cash Flow    -12000000   4950000   5925000   7143750   8667188\n",
         "\n",
-        "[9 rows x 5 columns]\n",
-        "\n",
-        "Project NPV = 9815100\n"
+        "[10 rows x 5 columns]"
        ]
       }
      ],
-     "prompt_number": 55
+     "prompt_number": 84
     },
     {
      "cell_type": "markdown",
@@ -468,21 +582,262 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "'<Missing!>'"
+      "import pandas as pd\n",
+      "import numpy  as np\n",
+      "\n",
+      "r     = 0.05      # 5%/yr discount rate\n",
+      "\n",
+      "rev_i = 33e6      # $33M initial revenue\n",
+      "rev_g = 0.05      # 5%/yr revenue growth rate\n",
+      "exp_i = 12e6      # $12M initial expenses \n",
+      "exp_g = 0.04      # 4%/yr expenses growth rate\n",
+      "sga_i =  1e6      # $1M/yr SG&A\n",
+      "tax_r = 0.35      # 35%/yr tax rate\n",
+      "beg   = 0         # First year of project\n",
+      "end   = 10        # Last year of project\n",
+      "life  = end-beg   # Project lifetime\n",
+      "cap_i = 200e6     # $200M Initial CAPX\n",
+      "term  = 100e6     # $100M terminal value\n",
+      "\n",
+      "sales = np.array([0] + [+fi.rnd(fi.comp(rev_i, i, rev_g)) for i in range(life)])\n",
+      "cogs  = np.array([0] + [-fi.rnd(fi.comp(exp_i, i, exp_g)) for i in range(life)])\n",
+      "sga   = np.array([0] + [-sga_i]*life)\n",
+      "deprc = np.array([0] + [-cap_i/life                       for _ in range(life)])\n",
+      "oppft = sales + cogs + sga + deprc\n",
+      "taxes = np.array(np.round(-tax_r * oppft), dtype=int)\n",
+      "nopat = oppft + taxes\n",
+      "capx  = np.array([-cap_i] + [0]*life)\n",
+      "fcf   = nopat + capx + (-deprc)\n",
+      "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "\n",
+      "years = [i for i in range(beg, end+1)]\n",
+      "data  = {'Revenue':           sales, \n",
+      "         'COGS':              cogs, \n",
+      "         'SG&A':              sga,\n",
+      "         'Less Dep':          deprc, \n",
+      "         'Operating Profits': oppft, \n",
+      "         'Tax':               taxes, \n",
+      "         'NOPAT':             nopat,\n",
+      "         'Plus Dep':          np.abs(deprc),\n",
+      "         'CAPX':              capx,\n",
+      "         'Free Cash Flow':    fcf}\n",
+      "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Operating Profits', 'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow']\n",
+      "df    = pd.DataFrame(data, columns=cols, index=years)\n",
+      "\n",
+      "print \"\\nProject NPV = %d\\n\" % fi.rnd(npv) \n",
+      "df.T"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Project NPV = 43528492\n",
+        "\n"
+       ]
+      },
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>0</th>\n",
+        "      <th>1</th>\n",
+        "      <th>2</th>\n",
+        "      <th>3</th>\n",
+        "      <th>4</th>\n",
+        "      <th>5</th>\n",
+        "      <th>6</th>\n",
+        "      <th>7</th>\n",
+        "      <th>8</th>\n",
+        "      <th>9</th>\n",
+        "      <th>10</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Revenue</th>\n",
+        "      <td>         0</td>\n",
+        "      <td> 33000000</td>\n",
+        "      <td> 34650000</td>\n",
+        "      <td> 36382500</td>\n",
+        "      <td> 38201625</td>\n",
+        "      <td> 40111706</td>\n",
+        "      <td> 42117292</td>\n",
+        "      <td> 44223156</td>\n",
+        "      <td> 46434314</td>\n",
+        "      <td> 48756030</td>\n",
+        "      <td> 51193831</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>COGS</th>\n",
+        "      <td>         0</td>\n",
+        "      <td>-12000000</td>\n",
+        "      <td>-12480000</td>\n",
+        "      <td>-12979200</td>\n",
+        "      <td>-13498368</td>\n",
+        "      <td>-14038303</td>\n",
+        "      <td>-14599835</td>\n",
+        "      <td>-15183828</td>\n",
+        "      <td>-15791181</td>\n",
+        "      <td>-16422829</td>\n",
+        "      <td>-17079742</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>SG&amp;A</th>\n",
+        "      <td>         0</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "      <td> -1000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Less Dep</th>\n",
+        "      <td>         0</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "      <td>-20000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Operating Profits</th>\n",
+        "      <td>         0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>  1170000</td>\n",
+        "      <td>  2403300</td>\n",
+        "      <td>  3703257</td>\n",
+        "      <td>  5073403</td>\n",
+        "      <td>  6517457</td>\n",
+        "      <td>  8039328</td>\n",
+        "      <td>  9643133</td>\n",
+        "      <td> 11333201</td>\n",
+        "      <td> 13114089</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Tax</th>\n",
+        "      <td>         0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>  -409500</td>\n",
+        "      <td>  -841155</td>\n",
+        "      <td> -1296140</td>\n",
+        "      <td> -1775691</td>\n",
+        "      <td> -2281110</td>\n",
+        "      <td> -2813765</td>\n",
+        "      <td> -3375097</td>\n",
+        "      <td> -3966620</td>\n",
+        "      <td> -4589931</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>NOPAT</th>\n",
+        "      <td>         0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>   760500</td>\n",
+        "      <td>  1562145</td>\n",
+        "      <td>  2407117</td>\n",
+        "      <td>  3297712</td>\n",
+        "      <td>  4236347</td>\n",
+        "      <td>  5225563</td>\n",
+        "      <td>  6268036</td>\n",
+        "      <td>  7366581</td>\n",
+        "      <td>  8524158</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Plus Dep</th>\n",
+        "      <td>         0</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>CAPX</th>\n",
+        "      <td>-200000000</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>        0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Free Cash Flow</th>\n",
+        "      <td>-200000000</td>\n",
+        "      <td> 20000000</td>\n",
+        "      <td> 20760500</td>\n",
+        "      <td> 21562145</td>\n",
+        "      <td> 22407117</td>\n",
+        "      <td> 23297712</td>\n",
+        "      <td> 24236347</td>\n",
+        "      <td> 25225563</td>\n",
+        "      <td> 26268036</td>\n",
+        "      <td> 27366581</td>\n",
+        "      <td> 28524158</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>10 rows \u00d7 11 columns</p>\n",
+        "</div>"
+       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 85,
        "text": [
-        "'<Missing!>'"
+        "                          0         1         2         3         4   \\\n",
+        "Revenue                    0  33000000  34650000  36382500  38201625   \n",
+        "COGS                       0 -12000000 -12480000 -12979200 -13498368   \n",
+        "SG&A                       0  -1000000  -1000000  -1000000  -1000000   \n",
+        "Less Dep                   0 -20000000 -20000000 -20000000 -20000000   \n",
+        "Operating Profits          0         0   1170000   2403300   3703257   \n",
+        "Tax                        0         0   -409500   -841155  -1296140   \n",
+        "NOPAT                      0         0    760500   1562145   2407117   \n",
+        "Plus Dep                   0  20000000  20000000  20000000  20000000   \n",
+        "CAPX              -200000000         0         0         0         0   \n",
+        "Free Cash Flow    -200000000  20000000  20760500  21562145  22407117   \n",
+        "\n",
+        "                         5         6         7         8         9         10  \n",
+        "Revenue            40111706  42117292  44223156  46434314  48756030  51193831  \n",
+        "COGS              -14038303 -14599835 -15183828 -15791181 -16422829 -17079742  \n",
+        "SG&A               -1000000  -1000000  -1000000  -1000000  -1000000  -1000000  \n",
+        "Less Dep          -20000000 -20000000 -20000000 -20000000 -20000000 -20000000  \n",
+        "Operating Profits   5073403   6517457   8039328   9643133  11333201  13114089  \n",
+        "Tax                -1775691  -2281110  -2813765  -3375097  -3966620  -4589931  \n",
+        "NOPAT               3297712   4236347   5225563   6268036   7366581   8524158  \n",
+        "Plus Dep           20000000  20000000  20000000  20000000  20000000  20000000  \n",
+        "CAPX                      0         0         0         0         0         0  \n",
+        "Free Cash Flow     23297712  24236347  25225563  26268036  27366581  28524158  \n",
+        "\n",
+        "[10 rows x 11 columns]"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 85
     },
     {
      "cell_type": "markdown",
