finish hw4 cleanup

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a5739ada1fd495371f0dea52e575c48d4989a847b228c4a719defa766b8ecd6a"
+  "signature": "sha256:870b075f41e84b95be4d5dfe6265a4113f91f268772c90431540d889cb02297c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -405,7 +405,7 @@
       "fcf   = nopat + capx + (-deprc)\n",
       "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
       "\n",
-      "years = [i for i in range(beg, end+1)]\n",
+      "years = np.array(range(beg, end+1))\n",
       "data  = {'Revenue':           sales, \n",
       "         'COGS':              cogs, \n",
       "         'SG&A':              sga,\n",
@@ -536,7 +536,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 84,
+       "prompt_number": 87,
        "text": [
         "                       2012      2013      2014      2015      2016\n",
         "Revenue                   0  15000000  18750000  23437500  29296875\n",
@@ -554,7 +554,7 @@
        ]
       }
      ],
-     "prompt_number": 84
+     "prompt_number": 87
     },
     {
      "cell_type": "markdown",
@@ -610,7 +610,7 @@
       "fcf   = nopat + capx + (-deprc)\n",
       "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
       "\n",
-      "years = [i for i in range(beg, end+1)]\n",
+      "years = np.array(range(beg, end+1))\n",
       "data  = {'Revenue':           sales, \n",
       "         'COGS':              cogs, \n",
       "         'SG&A':              sga,\n",
@@ -807,7 +807,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 85,
+       "prompt_number": 86,
        "text": [
         "                          0         1         2         3         4   \\\n",
         "Revenue                    0  33000000  34650000  36382500  38201625   \n",
@@ -837,7 +837,7 @@
        ]
       }
      ],
-     "prompt_number": 85
+     "prompt_number": 86
     },
     {
      "cell_type": "markdown",
