finish hw4 more cleanup

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5d77c96c86460bc6f9dc724ec5eaddda05365704c28911ee1bb6e0448404be5f"
+  "signature": "sha256:0f8daeb51f494f458e94a4f4f064f577d289ecdd19eec4945e4a610b1cf68498"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Question 1\n",
+      "### Question 1\n",
       "(5 points) Carlos goes to the bank to take out a personal loan. The stated annual \n",
       "interest rate is 12%, but interest is compounded monthly and he will make monthly \n",
       "payments. The effective annual interest rate (EAR) of the loan is less than 12%. "
@@ -60,7 +60,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Question 2\n",
+      "### Question 2\n",
       "(5 points) Gloria is 35 and trying to plan for retirement. She has put a budget\n",
       "together and plans to save \\$4,800 per year, starting at the end of this year, \n",
       "in a retirement fund until she is 65. Assume that she can make 7% on her account. \n",
