--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6841e221222e4573656de9f477aa5fccb8ffc1cada3137950f9a9d6e31894b23"
+  "signature": "sha256:16838b8284bd7c99107dfd90c13dac058ef2330f4c821ff6a8eaf5b875b2030f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -389,18 +389,17 @@
       "rev_g = 0.25      # 25%/yr revenue growth rate\n",
       "cog_i =  9e6      # $9M initial COGS \n",
       "cog_g = 0.25      # 25%/yr COGS growth rate\n",
-      "sga_i =    0      # $0/yr SG&A\n",
+      "sga   =    0      # $0/yr SG&A\n",
       "tax_r = 0.35      # 35%/yr tax rate\n",
       "term  = 5e6       # $5M terminal value\n",
       "\n",
       "# Compute the project cashflows\n",
-      "rev   = [+fi.comp(rev_i, i, rev_g)  for i in range(life)]\n",
-      "cogs  = [-fi.comp(cog_i, i, cog_g)  for i in range(life)]\n",
-      "sga   = [-sga_i] * life\n",
-      "oppft = [rev[i]+cogs[i]+sga[i]-depr for i in range(life)]   \n",
-      "taxes = [-oppft[i]*tax_r            for i in range(life)]  \n",
-      "nopat = [oppft[i]+taxes[i]          for i in range(life)]\n",
-      "cf    = [nopat[i]+depr              for i in range(life)]\n",
+      "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
+      "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
+      "oppft = [rev[i]+cogs[i]-sga-depr   for i in range(life)]   \n",
+      "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
+      "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
+      "cf    = [nopat[i]+depr             for i in range(life)]\n",
       "\n",
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
       "fcf        = [-capx]+cf \n",
@@ -412,7 +411,7 @@
       "years = range(beg, end+1)\n",
       "data  = {'Revenue':           [0]     + rev, \n",
       "         'COGS':              [0]     + cogs, \n",
-      "         'SG&A':              [0]     + sga,\n",
+      "         'SG&A':              [0]     + ([-sga_i]*life),\n",
       "         'Less Dep':          [0]     + ([-depr]*life), \n",
       "         'Op. Profits':       [0]     + oppft, \n",
       "         'Tax':               [0]     + taxes, \n",
@@ -453,7 +452,7 @@
        ]
       }
      ],
-     "prompt_number": 195
+     "prompt_number": 201
     },
     {
      "cell_type": "markdown",
@@ -492,18 +491,22 @@
       "rev_g = 0.05      # 5%/yr revenue growth rate\n",
       "cog_i = 12e6      # $12M initial COGS \n",
       "cog_g = 0.04      # 4%/yr COGS growth rate\n",
-      "sga_i =  1e6      # $1M/yr SG&A\n",
+      "sga   =  1e6      # $1M/yr SG&A\n",
       "tax_r = 0.35      # 35%/yr tax rate\n",
       "term  = 100e6     # $100M terminal value\n",
       "\n",
       "# Compute the project cashflows\n",
-      "rev   = [+fi.comp(rev_i, i, rev_g)  for i in range(life)]\n",
-      "cogs  = [-fi.comp(cog_i, i, cog_g)  for i in range(life)]\n",
-      "sga   = [-sga_i] * life\n",
-      "oppft = [rev[i]+cogs[i]+sga[i]-depr for i in range(life)]   \n",
-      "taxes = [-oppft[i]*tax_r            for i in range(life)]  \n",
-      "nopat = [oppft[i]+taxes[i]          for i in range(life)]\n",
-      "cf    = [nopat[i]+depr              for i in range(life)]\n",
+      "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
+      "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
+      "oppft = [rev[i]+cogs[i]-sga-depr   for i in range(life)]   \n",
+      "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
+      "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
+      "cf    = [nopat[i]+depr             for i in range(life)]\n",
+      "\n",
+      "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
+      "fcf        = [-capx]+cf \n",
+      "npv        = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "print \"\\nProject NPV = %d\\n\" % fi.rnd(npv) \n",
       "\n",
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
       "fcf        = [-capx]+cf\n",
@@ -515,7 +518,7 @@
       "years = range(beg, end+1)\n",
       "data  = {'Revenue':           [0]     + rev, \n",
       "         'COGS':              [0]     + cogs, \n",
-      "         'SG&A':              [0]     + sga,\n",
+      "         'SG&A':              [0]     + ([-sga_i]*life),\n",
       "         'Less Dep':          [0]     + ([-depr]*life), \n",
       "         'Op. Profits':       [0]     + oppft, \n",
       "         'Tax':               [0]     + taxes, \n",
@@ -539,10 +542,13 @@
         "\n",
         "Project NPV = 43528493\n",
         "\n",
+        "\n",
+        "Project NPV = 43528493\n",
+        "\n",
         "                       0         1         2         3         4         5   \\\n",
         "Revenue                 0  33000000  34650000  36382500  38201625  40111706   \n",
         "COGS                    0 -12000000 -12480000 -12979200 -13498368 -14038302   \n",
-        "SG&A                    0  -1000000  -1000000  -1000000  -1000000  -1000000   \n",
+        "SG&A                    0         0         0         0         0         0   \n",
         "Less Dep                0 -20000000 -20000000 -20000000 -20000000 -20000000   \n",
         "Op. Profits             0         0   1170000   2403300   3703257   5073403   \n",
         "Tax                     0         0   -409500   -841155  -1296139  -1775691   \n",
@@ -555,7 +561,7 @@
         "                      6         7         8         9          10  \n",
         "Revenue         42117291  44223156  46434313  48756029   51193831  \n",
         "COGS           -14599834 -15183828 -15791181 -16422828  -17079741  \n",
-        "SG&A            -1000000  -1000000  -1000000  -1000000   -1000000  \n",
+        "SG&A                   0         0         0         0          0  \n",
         "Less Dep       -20000000 -20000000 -20000000 -20000000  -20000000  \n",
         "Op. Profits      6517456   8039327   9643132  11333201   13114089  \n",
         "Tax             -2281109  -2813764  -3375096  -3966620   -4589931  \n",
@@ -569,7 +575,7 @@
        ]
       }
      ],
-     "prompt_number": 192
+     "prompt_number": 203
     },
     {
      "cell_type": "markdown",
